fix open api and controllers
