# src/main/java/com/web3/with/advice/HttpControllerAdvice.java
@@ -2,8 +2,9 @@ package com.web3.with.advice;
 
 import com.web3.with.exception.http.ForbiddenException;
 import com.web3.with.exception.http.NotFoundException;
-import com.web3.with.security.securityResponse.AppSecurityResponse;
+import java.time.ZonedDateTime;
 import org.apache.coyote.BadRequestException;
+import org.openapitools.model.WithAppExceptionRs;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -17,26 +18,26 @@ public class HttpControllerAdvice {
 
     @ExceptionHandler(ForbiddenException.class)
     @ResponseStatus(HttpStatus.FORBIDDEN)
-    public AppSecurityResponse handleForbiddenException(ForbiddenException e) {
-        return new AppSecurityResponse(HttpStatus.FORBIDDEN, e.getMessage());
+    public WithAppExceptionRs handleForbiddenException(ForbiddenException e) {
+        return new WithAppExceptionRs(HttpStatus.FORBIDDEN.toString(), e.getMessage(), ZonedDateTime.now());
     }
 
     @ExceptionHandler(BadRequestException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public AppSecurityResponse badRequestException(BadRequestException e) {
-        return new AppSecurityResponse(HttpStatus.BAD_REQUEST, e.getMessage());
+    public WithAppExceptionRs badRequestException(BadRequestException e) {
+        return new WithAppExceptionRs(HttpStatus.BAD_REQUEST.toString(), e.getMessage(), ZonedDateTime.now());
     }
 
     @ExceptionHandler(NotFoundException.class)
     @ResponseStatus(HttpStatus.NOT_FOUND)
-    public AppSecurityResponse handleNotFoundException(NotFoundException e) {
-        return new AppSecurityResponse(HttpStatus.NOT_FOUND, e.getMessage());
+    public WithAppExceptionRs handleNotFoundException(NotFoundException e) {
+        return new WithAppExceptionRs(HttpStatus.NOT_FOUND.toString(), e.getMessage(), ZonedDateTime.now());
     }
 
     @ExceptionHandler(NullPointerException.class)
     @ResponseStatus(HttpStatus.NO_CONTENT)
-    public AppSecurityResponse handleNullPoint(NullPointerException e) {
-        return new AppSecurityResponse(HttpStatus.NO_CONTENT, e.getMessage());
+    public WithAppExceptionRs handleNullPoint(NullPointerException e) {
+        return new WithAppExceptionRs(HttpStatus.NO_CONTENT.toString(), e.getMessage(), ZonedDateTime.now());
     }
 
 }
